--- a/src/app/components/skilltree-creator/skilltree-creator.component.scss
+++ b/src/app/components/skilltree-creator/skilltree-creator.component.scss
@@ -7,6 +7,16 @@
   width: calc(100% - 8px);
 }
 
+@media only screen and (max-width: 599px) {
+  .top-toolbar {
+    display: flex;
+  }
+
+  button {
+    flex: 1 1 25%;
+  }
+}
+
 button {
   min-width: 80px !important;
 }
