--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -25,6 +25,34 @@
       </mat-card-content>
     </mat-card>
   </sat-popover>
+  <sat-popover #flyLimitPopover xAlign="after" yAlign="center" hasBackdrop>
+    <mat-card>
+      <mat-card-content>
+        <p>Limit how long the pet can fly.<br>
+          Setting it to 0 will disable the limit.<br>
+          Format: [+-=][number]<br>
+          Examples:<br>
+          +2<br>
+          -3<br>
+          =6
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </sat-popover>
+  <sat-popover #flyRegenRatePopover xAlign="after" yAlign="center" hasBackdrop>
+    <mat-card>
+      <mat-card-content>
+        <p>Only needed when the fly limit is active.<br>
+          How fast the pet can fly again.<br>
+          Format: [+-=][number]<br>
+          Examples:<br>
+          +2<br>
+          -3<br>
+          =6
+        </p>
+      </mat-card-content>
+    </mat-card>
+  </sat-popover>
 
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Ride; trackBy: trackById; let i = index"
                        [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
@@ -42,7 +70,7 @@
       </mat-card>
       <mat-card>
         <mat-input-container>
-          <input matInput placeholder="Jump Height" [value]="upgrade.jumpHeight ? upgrade.jumpHeight : 0" type="text"
+          <input matInput placeholder="Jump Height" [value]="upgrade.jumpHeight ? upgrade.jumpHeight : '+0'" type="text"
                  pattern="[+-=][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'jumpHeight', $event.srcElement.value)">
           <span matSuffix>Blocks</span>
@@ -59,6 +87,29 @@
                       matTooltipPosition="right">
           Can Fly?
         </mat-checkbox>
+      </mat-card>
+      <mat-card>
+        <mat-input-container>
+          <input matInput placeholder="Fly Limit" [value]="upgrade.flyLimit ? upgrade.flyLimit : '+0'" type="text"
+                 pattern="[+-=][0-9]+(\.[0-9]+)?"
+                 (blur)="update(skilltree, upgrade, 'flyLimit', $event.srcElement.value)">
+          <span matSuffix>Meters</span>
+        </mat-input-container>
+        <button mat-icon-button [satPopoverAnchorFor]="flyLimitPopover" (click)="flyLimitPopover.toggle()">
+          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+        </button>
+      </mat-card>
+      <mat-card>
+        <mat-input-container>
+          <input matInput placeholder="Fly Regen Rate" [value]="upgrade.flyRegenRate ? upgrade.flyRegenRate : '+0'"
+                 type="text"
+                 pattern="[+-=][0-9]+(\.[0-9]+)?"
+                 (blur)="update(skilltree, upgrade, 'flyRegenRate', $event.srcElement.value)">
+          <span matSuffix>Meters/Tick</span>
+        </mat-input-container>
+        <button mat-icon-button [satPopoverAnchorFor]="flyRegenRatePopover" (click)="flyRegenRatePopover.toggle()">
+          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+        </button>
       </mat-card>
     </div>
     <mat-action-row>
