fix skilltree properties card size

--- a/src/app/components/skilltree-editor/skilltree-editor.component.html
+++ b/src/app/components/skilltree-editor/skilltree-editor.component.html
@@ -3,7 +3,7 @@
     Skill Editor
   </a>
   <a mat-tab-link [active]="(tab$ | async) == 1" (click)="switchTab(1)">
-    Skilltree Properties
+    Properties
   </a>
 </nav>
 
