--- a/src/app/components/skilltree-properties/skilltree-properties.component.html
+++ b/src/app/components/skilltree-properties/skilltree-properties.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row" fxLayoutGap="10px">
-  <mat-card fxLayout="column" fxFlex="grow">
+<div fxLayout.gt-md="row wrap" fxLayout.lt-md="column" fxLayoutGap="1em">
+  <mat-card fxLayout="column" fxFlex.gt-md="calc(50% - 0.5em)" fxFlex="100">
     <mat-input-container>
       <input matInput placeholder="Skilltree Name" [formControl]="id" (blur)="rename(id)"
              [appSkilltreeDuplicate]="skilltreeNames" required pattern="[^\s]*">
@@ -31,7 +31,7 @@
       </mat-error>
     </mat-input-container>
   </mat-card>
-  <mat-card fxLayout="column" fxFlex="grow">
+  <mat-card fxLayout="column" fxFlex.gt-md="calc(50% - 0.5em)" fxFlex="100">
     <mat-input-container>
       <input matInput placeholder="Required Pet Level" [formControl]="requiredLevel"
              (blur)="update('requiredLevel',requiredLevel)" pattern="\d*" type="number">
