--- a/src/app/components/skilltree-import-dialog/skilltree-import-dialog.component.html
+++ b/src/app/components/skilltree-import-dialog/skilltree-import-dialog.component.html
@@ -2,6 +2,6 @@
 <div mat-dialog-content>Select a Skilltree-File (.json)</div>
 <div mat-dialog-actions fxLayout="row" fxLayoutAlign="space-around center">
   <button mat-raised-button color="primary" (click)="imgFileInput.click()">Select</button>
-  <input hidden type="file" #imgFileInput (change)="onSelectFile($event)"/>
+  <input hidden type="file" #imgFileInput (change)="onSelectFile($event)" accept=".json">
   <button mat-raised-button (click)="done()" color="primary" [disabled]="!valid">Import</button>
 </div>
